<resources>
    <string name="app_name">keanweng-FeelsBook</string>
    <string name="anger">Anger</string>
    <string name="love">Love</string>
    <string name="joy">Joy</string>
    <string name="surprise">Surprise</string>
    <string name="sadness">Sadness</string>
    <string name="fear">Fear</string>
    <string name="count">Emotion count:</string>
    <string name="optional">optional</string>
    <string name="add_comment">Add comment:</string>
    <string name="anger_count">Anger:</string>
    <string name="love_count">Love:</string>
    <string name="joy_count">Joy:</string>
    <string name="surprise_count">Surprise:</string>
    <string name="sadness_count">Sadness:</string>
    <string name="fear_count">Fear:</string>
    <string name="new_feeling">Record your emotion:</string>
    <string name="browse_emotion">Browse/edit past emotions</string>
    <string name="view_count">View Count</string>
    <string name="emotion_list">Past recorded emotions:</string>
    <string name="record_success">Emotion recorded!</string>
    <string name="view_count_short">View</string>
    <string name="ok">OK</string>
    <string name="delete">DELETE</string>
    <string name="edit_date">Edit Date</string>
    <string name="emotion_detail">Emotion Detail</string>
    <string name="emotion_type">Emotion Type:</string>
    <string name="emotion_date">Date Recorded:</string>
    <string name="emotion_comment">Comment:</string>
    <string name="no_comment">No comment was added for this emotion!</string>
    <string name="edit_emotion">Edit Emotion</string>
    <string name="edit_comment">Edit Comment</string>

    <string-array name="emotions_array">
        <item>Anger</item>
        <item>Fear</item>
        <item>Joy</item>
        <item>Love</item>
        <item>Sadness</item>
        <item>Surprise</item>
    </string-array>
    <string name="edit_comment_hint">Enter comment here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_delete">Delete Emotion?</string>
    <string name="confirm_delete_text">Deleted Emotions cannot be recovered! Delete?</string>
    <string name="delete_toaster">Emotion Deleted!</string>
    <string name="toaster_date">Date Updated!</string>
    <string name="toaster_emotion">Emotion Updated!</string>
    <string name="toaster_comment">Comment Updated!</string>
</resources>
